Update version, add files param to package

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@samgl/hermes-react",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Simple email newsletter subscription forms for your app.",
   "main": "dist/index.js",
   "type": "module",
@@ -9,6 +9,7 @@
     "build": "rollup -c",
     "build:watch": "rollup -cw"
   },
+  "files": [ "dist" ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sam-gl/hermes-react.git"
